--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,7 +14,7 @@
     "chart.js": "^4.4.9",
     "chartjs-adapter-moment": "^1.0.1",
     "flatpickr": "^4.6.13",
-    "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "moment": "^2.29.4",
     "vue": "^3.2.20",
     "vue-flatpickr-component": "^11.0.3",
